<resources>
    <string name="app_name">Plasma</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeAct</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="plasma_collection">Plasma Collection</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_where">Where</string>
    <string name="enter_details">Enter Details</string>
    <string name="enter_age">Enter Age:</string>
    <string name="eg_20">eg: 20</string>
    <string name="gender">Gender:</string>
    <string name="eg_male">eg: Male</string>
    <string name="enter_body_weight">Enter Body Weight:</string>
    <string name="eg_50kg">eg: 50kg</string>
    <string name="enter_bmi">Enter BMI:</string>
    <string name="eg_20_2">eg: 20.2</string>
    <string name="enter_bmr">Enter BMR:</string>
    <string name="eg_20_1">eg: 20.1</string>
    <string name="enter_blood_group">Enter Blood group:</string>
    <string name="eg_a">eg: A+</string>
    <string name="add_request">Add Request</string>
    <string name="title_activity_view_requests">view_requests</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="img">img</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="type">Type:</string>
    <string name="hospital">Hospitals</string>
    <string name="donor">Donors</string>
    <string name="recipient">Recipient</string>
    <string name="sign">Sign up</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_latitude">Enter Latitude</string>
    <string name="enter_longitude">Enter Longitude</string>
    <string name="submit">submit</string>
    <string name="cancel">cancel</string>
    <string name="title_activity_hospitals_location">HospitalsLocation</string>
</resources>