<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.become_Donor"
    android:background="@color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >
            <ImageView
                android:contentDescription="@string/enter_blood_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/account"
                android:layout_centerHorizontal="true"
                android:id="@+id/detailsImg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_details"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@id/detailsImg"
                android:layout_centerHorizontal="true"
                android:id="@+id/detailsText"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_age"
                android:layout_below="@id/detailsText"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/enterAgeLabel"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@id/enterAgeLabel"
                android:hint="@string/eg_20"
                android:inputType="number"
                android:id="@+id/ageTextField"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_below="@id/ageTextField"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/enterGenderLabel"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@id/enterGenderLabel"
                android:hint="@string/eg_male"
                android:inputType="text"
                android:id="@+id/genderTextField"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_body_weight"
                android:layout_below="@id/genderTextField"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/BodyWeightLabel"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@id/BodyWeightLabel"
                android:inputType="text"
                android:hint="@string/eg_50kg"
                android:id="@+id/BodyWeightText"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_bmi"
                android:layout_below="@id/BodyWeightText"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/BMILabel"/>

            <EditText
                android:id="@+id/BMItextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/BMILabel"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="numberDecimal"
                android:hint="@string/eg_20_2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_bmr"
                android:layout_below="@id/BMItextField"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/BMRLabel"/>

            <EditText
                android:id="@+id/BMRtextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/BMRLabel"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="numberDecimal"
                android:layout_marginBottom="10dp"
                android:hint="@string/eg_20_1" />

            <TextView
                android:id="@+id/BloodGrplabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/BMRtextField"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/enter_blood_group"
                android:textStyle="bold" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@id/BloodGrplabel"
                android:hint="@string/eg_a"
                android:inputType="text"
                android:id="@+id/BloodGrptxt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address"
                android:layout_below="@id/BloodGrptxt"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/address"/>

            <EditText
                android:id="@+id/addressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:hint="1/9087" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mobile"
                android:layout_below="@id/addressText"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/mobile"/>

            <EditText
                android:id="@+id/mobileText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mobile"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="eg. 9910"
                android:inputType="phone" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_request"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/mobileText"
                android:id="@+id/AddRequest"
                />
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>