<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="#D8E9FF">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/account"
        android:layout_margin="20dp"
        android:id="@+id/signINIMG"
        android:contentDescription="@string/img" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signINIMG"
        android:textStyle="bold"
        android:id="@+id/signInHead"
        />

    <LinearLayout
        android:id="@+id/enterCred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_below="@+id/signInHead">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/usernameTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="shivang424"
            android:drawableStart="@drawable/email_edit_text"
            android:drawablePadding="5dp"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passwordTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:drawableStart="@drawable/lock_edit_text"
            android:drawablePadding="5dp"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Confirm Password:"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ConfirmPasswordTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:drawableStart="@drawable/lock_edit_text"
            android:drawablePadding="5dp"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_below="@+id/enterCred"
        android:id="@+id/typeLinear"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Type"
            android:textSize="20sp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/typeGroup"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hospital"
                android:textSize="20sp"
                android:id="@+id/HospitalRadio"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Recipient"
                android:textSize="20sp"
                android:id="@+id/RecipientRadio"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Donors"
                android:textSize="20sp"
                android:id="@+id/DonorRadio"
                />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/typeLinear"
        android:id="@+id/signUpButton"
        android:layout_centerHorizontal="true"
        android:text="@string/sign" />


</RelativeLayout>